[package]
name = "rustdb"
version = "5.2.63"
edition = "2021"
authors = ["George Barwood"]
description = "SQL database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/RustDB/"
categories = ["database-implementations"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
serde = { version = "1.0.131", features = ["derive","rc"], optional=true }

[features]
default = ["builtin","pack","verify","table","max","renumber","gentrans"]
gentrans = []
serde = ["dep:serde"]
builtin = []
table = []
max = ["builtin","table"]
pack = []
renumber = []
verify = []
unsafe-optim = []
log = []
log-block = []
log-bps = []
log-all = ["log", "log-block", "log-bps"]
compact = []

[dev-dependencies]
rand = "0.8.4"
sqlite = "0.32.0"