[package]
name = "rustdb"
version = "5.2.99"
edition = "2021"
authors = ["George Barwood"]
description = "SQL database"
license = "MIT OR Apache-2.0"
repository = "https://github.com/georgebarwood/RustDB/"
categories = ["database-implementations"]
include = ["/src"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
serde = { version = "1.0.131", features = ["derive","rc"], optional=true }
btree_experiment = { version = "0.1.0", optional=true }

[features]
default = ["builtin","pack","verify","table","max","renumber","gentrans"]
gentrans = []
serde = ["dep:serde","btree_experiment/serde"]
builtin = []
table = []
max = ["builtin","table"]
pack = []
renumber = []
verify = []
unsafe-optim = ["btree_experiment/unsafe-optim"]
log = []
log-execute= []
compact = []
btree_experiment = ["dep:btree_experiment"]

[dev-dependencies]
rand = "0.8.4"
sqlite = "0.32.0"
